# concatjs_bazel_repro

./: README.md  WORKSPACE.bazel  package.json
app/: BUILD.bazel  index.html  main.ts
app/cool_module/: a.ts
